app/assets/stylesheets/events_index.scss
.map-container {
	height: 70vh;
}

.map-container #map {
	width: 100%;
	height: 100%;
}

.info-window-content a {
	color: #8C0902;
}

.search-sidebar {
	width: 25vw;
	min-width: 450px;

	// Rounded borders on search-bar
	input.btn-danger {
	border-radius: 0 0.75rem 0.75rem 0 !important;
	}

	.toggle {
		border-radius: 0.75rem 0 0 0.75rem;
	}
}

.events-card-deck {
	height: 70vh;
	overflow: auto;
}

.eventcard {
	width: 100%;

	a img {
		width: 100%;
		height: 10rem;
		object-fit: cover;
		object-position: center;
		background-color: black;
	}

	.card-body {
		overflow: hidden;
	}

	p.viewcount {
		position: absolute;
		top: 0.75rem;
		right: 1rem;
	}

	p.badge {
		position: absolute;
		transform: translateY(-50%);
		right: 1rem;
		// border: 1px solid red;
	}
}


@media only screen and (max-width: 768px) {

	h2.events-body-title {
		display: none;
	}

	.events-index-body {
		margin: 2%;
		margin-top: 4%;
	}

	.eventcard {
		max-height: 28vh;
	}

	.search-sidebar {
		width: 100%;
		min-width: 250px;
	}

  .map-container {
		height: 30vh;
		width: 100%;
	}
}


// Bootstrap 4 breakpoints & gutter
$grid-breakpoints: (
    xs: 0,
    // sm: 576px,
    md: 768px,
    lg: 992px,
    xl: 1200px,
    xx: 1500px
) !default;

$grid-gutter-width: 30px !default;

// number of cards per line for each breakpoint
$cards-per-line: (
    xs: 1,
    // sm: 1,
    md: 1,
    lg: 2,
    xl: 3,
    xx: 4
);

@each $name, $breakpoint in $grid-breakpoints {
	@media (min-width: $breakpoint) {
		.card-deck .card {
			flex: 0 0 calc(#{100/map-get($cards-per-line, $name)}% - #{$grid-gutter-width});
		}
	}
}

